Ui simpsons done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.1.0
   intl: ^0.18.1
   loading_animation_widget: ^1.2.0+4
+  easy_search_bar: ^2.5.0
 
 dev_dependencies:
   flutter_test:
