--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  floor: ^1.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,11 +44,13 @@ dependencies:
   intl: ^0.18.1
   loading_animation_widget: ^1.2.0+4
   easy_search_bar: ^2.5.0
+  searchable_listview: ^2.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  floor_generator: ^1.4.2
+  build_runner: ^2.1.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
